test/tests/optics/nomatrixindex.golden

test\tests\optics\nomatrixindex.hs:36:17: error:
    • get: matrix column index 4 is out of bounds.
      This matrix has 3 rows, 4 columns.
      Note: indexing starts from 0.
    • In a stmt of a 'do' block:
        position <- use @(Name "vertexData" :.: Entry 4 2)
      In the third argument of ‘entryPoint’, namely
        ‘do position <- use @(Name "vertexData" :.: Entry 4 2)
            #gl_Position .= position’
      In a stmt of a 'do' block:
        entryPoint
          @"main"
          @Vertex
          do position <- use @(Name "vertexData" :.: Entry 4 2)
             #gl_Position .= position
   |
36 |     position <- use @( Name "vertexData" :.: Entry 4 2 )
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
